--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
-    "DB_NAME": "",
+    "DB_NAME": "Teletest",
     "DB_USER": "postgres",
-    "DB_PASSWORD": "",
+    "DB_PASSWORD": "vadim01962",
     "DB_HOST": "localhost",
     "DB_PORT": "5432"
 }
