--- a/requirements.txt
+++ b/requirements.txt
@@ -74,3 +74,19 @@ trio-websocket        0.9.2
 urllib3               1.26.8
 webdriver-manager     3.5.3
 wsproto               1.1.0
+flask		          3.0.2
+Flask-Login	          0.6.3
+Jinja2		          3.1.3
+MarkupSafe	          2.1.5
+SQLAlchemy	          2.0.29
+blinker 	          1.7.0
+click	    	      8.1.7
+colorama	          0.4.6
+filelock	          3.13.3
+flask-sqlalchemy      3.1.1
+flask-wtf	          1.2.1
+fsspec		          2024.3.1
+greenlet	          3.0.3
+importlib-metadata    7.1.0
+itsdangerous	      2.1.2
+psycopg2              2.9.9
